# amitools

./: Dockerfile  local-tox  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: publish-to-pypi.yml  test.yml
amitools/data/fd/: dos_lib.fd
amitools/tools/: icontool.py
amitools/vamos/astructs/: access.py  astruct.py  pointer.py  typebase.py
amitools/vamos/lib/: DosLibrary.py  ExecLibrary.py  InputDevice.py  LibList.py  TimerDevice.py
amitools/vamos/lib/dos/: CSource.py  DosProtection.py  FileManager.py  Lock.py  Process.py
amitools/vamos/lib/lexec/: PortManager.py  funcbase.py  msgfunc.py  signalfunc.py  taskfunc.py
amitools/vamos/libcore/: create.py  impl.py  proxy.py  stub.py
amitools/vamos/libmgr/: setup.py
amitools/vamos/libnative/: initresident.py
amitools/vamos/libstructs/: exec_.py
amitools/vamos/libtypes/: __init__.py  dospkt.py  execlib.py  library.py  list_.py  msg.py  node.py  process.py  task.py
amitools/vamos/loader/: segload.py
amitools/vamos/mem/: alloc.py
test/pytask/: pytask_exec_list.py  pytask_exec_msg.py  pytask_exec_task.py  pytask_util_tag.py
test/unit/: astructs_astruct.py  astructs_dump.py  libnative_initres.py  libnative_libfuncs.py  libnative_loader.py  libnative_mgr.py  libtypes_execlib.py  libtypes_library.py  libtypes_list.py  libtypes_msg.py  task_execscheduler.py
