[build-system]
requires = ["setuptools", "setuptools-scm", "cython >= 3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amitools-amifuse"
authors = [
    {name = "Christian Vogelgsang", email = "chris@vogelgsang.org"},
    {name = "Stefan Reinauer", email = "stefan.reinauer@coreboot.org"},
]
description = "A package to support development with classic Amiga m68k systems"
requires-python = ">=3.9"
keywords = ["AmigaOS", "vamos"]
license = "GPL-2.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: System :: Emulators",
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
vamos = ["machine68k >= 0.4.0", "greenlet"]

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["amitools"]

[tool.setuptools.dynamic]
readme = { file="README.md", content-type="text/markdown" }

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.scripts]
fdtool = "amitools.tools.fdtool:main"
geotool = "amitools.tools.geotool:main"
hunktool = "amitools.tools.hunktool:main"
rdbtool = "amitools.tools.rdbtool:main"
romtool = "amitools.tools.romtool:main"
typetool = "amitools.tools.typetool:main"
vamos = "amitools.tools.vamos:main"
vamospath = "amitools.tools.vamospath:main"
vamostool = "amitools.tools.vamostool:main"
xdfscan = "amitools.tools.xdfscan:main"
xdftool = "amitools.tools.xdftool:main"
